--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
 	font-size: 30px;
 	padding-right: 50px;
 	font-weight: 700;
+	text-shadow: 0 1px 1px rgba(0,0,0,0.3);
 }
 #main-navbar a {
 	text-decoration: none;
@@ -71,6 +72,7 @@ body {
 	text-align: left;
 	font-size: 3em;
 	font-weight: 300;
+	line-height: 1.1em;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.5);
 }
 #intro .main h3 {
@@ -144,4 +146,42 @@ footer {
 	margin-top: 50px;
 	color: #FFF;
 	text-align: center;
+}
+
+@media(max-width:600px){
+	.container {
+		width: 100%;
+	}
+	#main-navbar li {
+		line-height: 1.8em;
+		text-align: center;
+		float: none;
+		display: block;
+	}
+	#main-navbar .main-link a {
+		font-size: 2em;
+		padding-right: 0;
+	}
+	#main-navbar .right {
+		float: none;
+	}
+	#intro .main {
+		padding-top: 20px;
+		float: none;
+		width: 100%;
+	}
+	#intro .main h1 {
+		font-size: 2.2em;
+	}
+	#intro .main h3 {
+		font-size: 1.2em;
+	}
+	#intro .sidebar {
+		float: none;
+		width: 100%;
+	}
+	#services .item {
+		float: none;
+		width: 100%;
+	}
 }
